rdhlang4/parser/langParser.py
# Generated from lang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class langParser ( Parser ):

    grammarFileName = "lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'static'", "'typedef'", 
                     "'import'", "'='", "'{'", "'}'", "':'", "'['", "']'", 
                     "'.'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'>='", "'<='", "'>'", "'<'", "'=='", "'!='", "'true'", 
                     "'false'", "'null'", "'Void'", "'var'", "'Integer'", 
                     "'String'", "'Function'", "'=>'", "'Object'", "'Any'", 
                     "'while'", "'if'", "'else'", "'function'", "'nothrow'", 
                     "'throws'", "'noexit'", "'return'", "'exit'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SYMBOL", "STRING", "NUMBER", 
                      "WS" ]

    RULE_code = 0
    RULE_functionStub = 1
    RULE_symbolInitialization = 2
    RULE_newObject = 3
    RULE_pair = 4
    RULE_literal = 5
    RULE_objectLiteral = 6
    RULE_literalPair = 7
    RULE_array = 8
    RULE_expression = 9
    RULE_voidType = 10
    RULE_inferredType = 11
    RULE_integerType = 12
    RULE_stringType = 13
    RULE_functionType = 14
    RULE_objectType = 15
    RULE_anyType = 16
    RULE_propertyType = 17
    RULE_whileLoop = 18
    RULE_ifBlock = 19
    RULE_functionLiteral = 20
    RULE_functionArgumentAndReturns = 21
    RULE_functionThrows = 22
    RULE_functionExits = 23
    RULE_returnExpression = 24
    RULE_exitExpression = 25

    ruleNames =  [ "code", "functionStub", "symbolInitialization", "newObject", 
                   "pair", "literal", "objectLiteral", "literalPair", "array", 
                   "expression", "voidType", "inferredType", "integerType", 
                   "stringType", "functionType", "objectType", "anyType", 
                   "propertyType", "whileLoop", "ifBlock", "functionLiteral", 
                   "functionArgumentAndReturns", "functionThrows", "functionExits", 
                   "returnExpression", "exitExpression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    SYMBOL=46
    STRING=47
    NUMBER=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_code

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ToFunctionStubContext(CodeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.CodeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionStub(self):
            return self.getTypedRuleContext(langParser.FunctionStubContext,0)

        def EOF(self):
            return self.getToken(langParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToFunctionStub" ):
                listener.enterToFunctionStub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToFunctionStub" ):
                listener.exitToFunctionStub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToFunctionStub" ):
                return visitor.visitToFunctionStub(self)
            else:
                return visitor.visitChildren(self)


    class ToLiteralContext(CodeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.CodeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(langParser.LiteralContext,0)

        def EOF(self):
            return self.getToken(langParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToLiteral" ):
                listener.enterToLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToLiteral" ):
                listener.exitToLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToLiteral" ):
                return visitor.visitToLiteral(self)
            else:
                return visitor.visitChildren(self)



    def code(self):

        localctx = langParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_code)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = langParser.ToLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.literal()
                self.state = 53
                self.match(langParser.EOF)
                pass

            elif la_ == 2:
                localctx = langParser.ToFunctionStubContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.functionStub()
                self.state = 56
                self.match(langParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionStubContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_functionStub

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LocalVariableDeclarationContext(FunctionStubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.FunctionStubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)

        def symbolInitialization(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.SymbolInitializationContext)
            else:
                return self.getTypedRuleContext(langParser.SymbolInitializationContext,i)

        def functionStub(self):
            return self.getTypedRuleContext(langParser.FunctionStubContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalVariableDeclaration" ):
                listener.enterLocalVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalVariableDeclaration" ):
                listener.exitLocalVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalVariableDeclaration" ):
                return visitor.visitLocalVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class ImportStatementContext(FunctionStubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.FunctionStubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)
        def functionStub(self):
            return self.getTypedRuleContext(langParser.FunctionStubContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)


    class ToExpressionContext(FunctionStubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.FunctionStubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(langParser.ExpressionContext,i)

        def functionStub(self):
            return self.getTypedRuleContext(langParser.FunctionStubContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToExpression" ):
                listener.enterToExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToExpression" ):
                listener.exitToExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToExpression" ):
                return visitor.visitToExpression(self)
            else:
                return visitor.visitChildren(self)


    class StaticValueDeclarationContext(FunctionStubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.FunctionStubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def symbolInitialization(self):
            return self.getTypedRuleContext(langParser.SymbolInitializationContext,0)

        def functionStub(self):
            return self.getTypedRuleContext(langParser.FunctionStubContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStaticValueDeclaration" ):
                listener.enterStaticValueDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStaticValueDeclaration" ):
                listener.exitStaticValueDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStaticValueDeclaration" ):
                return visitor.visitStaticValueDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class TypedefContext(FunctionStubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.FunctionStubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)
        def functionStub(self):
            return self.getTypedRuleContext(langParser.FunctionStubContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef" ):
                listener.enterTypedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef" ):
                listener.exitTypedef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef" ):
                return visitor.visitTypedef(self)
            else:
                return visitor.visitChildren(self)



    def functionStub(self):

        localctx = langParser.FunctionStubContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionStub)
        self._la = 0 # Token type
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = langParser.LocalVariableDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.expression(0)
                self.state = 61
                self.symbolInitialization()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==langParser.T__0:
                    self.state = 62
                    self.match(langParser.T__0)
                    self.state = 63
                    self.symbolInitialization()
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 69
                self.match(langParser.T__1)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << langParser.T__2) | (1 << langParser.T__3) | (1 << langParser.T__4) | (1 << langParser.T__6) | (1 << langParser.T__9) | (1 << langParser.T__12) | (1 << langParser.T__14) | (1 << langParser.T__15) | (1 << langParser.T__25) | (1 << langParser.T__26) | (1 << langParser.T__27) | (1 << langParser.T__28) | (1 << langParser.T__29) | (1 << langParser.T__30) | (1 << langParser.T__31) | (1 << langParser.T__32) | (1 << langParser.T__34) | (1 << langParser.T__35) | (1 << langParser.T__36) | (1 << langParser.T__37) | (1 << langParser.T__39) | (1 << langParser.T__43) | (1 << langParser.T__44) | (1 << langParser.SYMBOL) | (1 << langParser.STRING) | (1 << langParser.NUMBER))) != 0):
                    self.state = 70
                    self.functionStub()


                pass

            elif la_ == 2:
                localctx = langParser.StaticValueDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(langParser.T__2)
                self.state = 74
                self.symbolInitialization()
                self.state = 75
                self.match(langParser.T__1)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << langParser.T__2) | (1 << langParser.T__3) | (1 << langParser.T__4) | (1 << langParser.T__6) | (1 << langParser.T__9) | (1 << langParser.T__12) | (1 << langParser.T__14) | (1 << langParser.T__15) | (1 << langParser.T__25) | (1 << langParser.T__26) | (1 << langParser.T__27) | (1 << langParser.T__28) | (1 << langParser.T__29) | (1 << langParser.T__30) | (1 << langParser.T__31) | (1 << langParser.T__32) | (1 << langParser.T__34) | (1 << langParser.T__35) | (1 << langParser.T__36) | (1 << langParser.T__37) | (1 << langParser.T__39) | (1 << langParser.T__43) | (1 << langParser.T__44) | (1 << langParser.SYMBOL) | (1 << langParser.STRING) | (1 << langParser.NUMBER))) != 0):
                    self.state = 76
                    self.functionStub()


                pass

            elif la_ == 3:
                localctx = langParser.TypedefContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(langParser.T__3)
                self.state = 80
                self.expression(0)
                self.state = 81
                self.match(langParser.SYMBOL)
                self.state = 82
                self.match(langParser.T__1)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << langParser.T__2) | (1 << langParser.T__3) | (1 << langParser.T__4) | (1 << langParser.T__6) | (1 << langParser.T__9) | (1 << langParser.T__12) | (1 << langParser.T__14) | (1 << langParser.T__15) | (1 << langParser.T__25) | (1 << langParser.T__26) | (1 << langParser.T__27) | (1 << langParser.T__28) | (1 << langParser.T__29) | (1 << langParser.T__30) | (1 << langParser.T__31) | (1 << langParser.T__32) | (1 << langParser.T__34) | (1 << langParser.T__35) | (1 << langParser.T__36) | (1 << langParser.T__37) | (1 << langParser.T__39) | (1 << langParser.T__43) | (1 << langParser.T__44) | (1 << langParser.SYMBOL) | (1 << langParser.STRING) | (1 << langParser.NUMBER))) != 0):
                    self.state = 83
                    self.functionStub()


                pass

            elif la_ == 4:
                localctx = langParser.ImportStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(langParser.T__4)
                self.state = 87
                self.match(langParser.SYMBOL)
                self.state = 88
                self.match(langParser.T__1)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << langParser.T__2) | (1 << langParser.T__3) | (1 << langParser.T__4) | (1 << langParser.T__6) | (1 << langParser.T__9) | (1 << langParser.T__12) | (1 << langParser.T__14) | (1 << langParser.T__15) | (1 << langParser.T__25) | (1 << langParser.T__26) | (1 << langParser.T__27) | (1 << langParser.T__28) | (1 << langParser.T__29) | (1 << langParser.T__30) | (1 << langParser.T__31) | (1 << langParser.T__32) | (1 << langParser.T__34) | (1 << langParser.T__35) | (1 << langParser.T__36) | (1 << langParser.T__37) | (1 << langParser.T__39) | (1 << langParser.T__43) | (1 << langParser.T__44) | (1 << langParser.SYMBOL) | (1 << langParser.STRING) | (1 << langParser.NUMBER))) != 0):
                    self.state = 89
                    self.functionStub()


                pass

            elif la_ == 5:
                localctx = langParser.ToExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 95 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 92
                        self.expression(0)
                        self.state = 93
                        self.match(langParser.T__1)

                    else:
                        raise NoViableAltException(self)
                    self.state = 97 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << langParser.T__2) | (1 << langParser.T__3) | (1 << langParser.T__4) | (1 << langParser.T__6) | (1 << langParser.T__9) | (1 << langParser.T__12) | (1 << langParser.T__14) | (1 << langParser.T__15) | (1 << langParser.T__25) | (1 << langParser.T__26) | (1 << langParser.T__27) | (1 << langParser.T__28) | (1 << langParser.T__29) | (1 << langParser.T__30) | (1 << langParser.T__31) | (1 << langParser.T__32) | (1 << langParser.T__34) | (1 << langParser.T__35) | (1 << langParser.T__36) | (1 << langParser.T__37) | (1 << langParser.T__39) | (1 << langParser.T__43) | (1 << langParser.T__44) | (1 << langParser.SYMBOL) | (1 << langParser.STRING) | (1 << langParser.NUMBER))) != 0):
                    self.state = 99
                    self.functionStub()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymbolInitializationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_symbolInitialization

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbolInitialization" ):
                listener.enterSymbolInitialization(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbolInitialization" ):
                listener.exitSymbolInitialization(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbolInitialization" ):
                return visitor.visitSymbolInitialization(self)
            else:
                return visitor.visitChildren(self)




    def symbolInitialization(self):

        localctx = langParser.SymbolInitializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_symbolInitialization)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(langParser.SYMBOL)
            self.state = 105
            self.match(langParser.T__5)
            self.state = 106
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NewObjectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.PairContext)
            else:
                return self.getTypedRuleContext(langParser.PairContext,i)


        def getRuleIndex(self):
            return langParser.RULE_newObject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewObject" ):
                listener.enterNewObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewObject" ):
                listener.exitNewObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewObject" ):
                return visitor.visitNewObject(self)
            else:
                return visitor.visitChildren(self)




    def newObject(self):

        localctx = langParser.NewObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_newObject)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(langParser.T__6)
                self.state = 109
                self.pair()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==langParser.T__0:
                    self.state = 110
                    self.match(langParser.T__0)
                    self.state = 111
                    self.pair()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 117
                self.match(langParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(langParser.T__6)
                self.state = 120
                self.match(langParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def getRuleIndex(self):
            return langParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = langParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pair)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [langParser.SYMBOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(langParser.SYMBOL)
                self.state = 124
                self.match(langParser.T__8)
                self.state = 125
                self.expression(0)
                pass
            elif token in [langParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(langParser.STRING)
                self.state = 127
                self.match(langParser.T__8)
                self.state = 128
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(langParser.NUMBER, 0)

        def objectLiteral(self):
            return self.getTypedRuleContext(langParser.ObjectLiteralContext,0)


        def functionLiteral(self):
            return self.getTypedRuleContext(langParser.FunctionLiteralContext,0)


        def getRuleIndex(self):
            return langParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = langParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_literal)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [langParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(langParser.STRING)
                pass
            elif token in [langParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(langParser.NUMBER)
                pass
            elif token in [langParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.objectLiteral()
                pass
            elif token in [langParser.T__39]:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.functionLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literalPair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.LiteralPairContext)
            else:
                return self.getTypedRuleContext(langParser.LiteralPairContext,i)


        def getRuleIndex(self):
            return langParser.RULE_objectLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectLiteral" ):
                listener.enterObjectLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectLiteral" ):
                listener.exitObjectLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectLiteral" ):
                return visitor.visitObjectLiteral(self)
            else:
                return visitor.visitChildren(self)




    def objectLiteral(self):

        localctx = langParser.ObjectLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_objectLiteral)
        self._la = 0 # Token type
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(langParser.T__6)
                self.state = 138
                self.literalPair()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==langParser.T__0:
                    self.state = 139
                    self.match(langParser.T__0)
                    self.state = 140
                    self.literalPair()
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 146
                self.match(langParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(langParser.T__6)
                self.state = 149
                self.match(langParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralPairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def literal(self):
            return self.getTypedRuleContext(langParser.LiteralContext,0)


        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def getRuleIndex(self):
            return langParser.RULE_literalPair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralPair" ):
                listener.enterLiteralPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralPair" ):
                listener.exitLiteralPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralPair" ):
                return visitor.visitLiteralPair(self)
            else:
                return visitor.visitChildren(self)



